--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <footer>Desenvolvido por:&nbsp<a href="https://beacons.ai/feliperama">Felipe Batista</a></footer>
   <!-- javascript -->
-  <script src="hex.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
